--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   app:
-    container_name: go-live-reload
+    container_name: go-pattern-adapter
     build:
       context: .
       dockerfile: ./Dockerfile.dev
@@ -10,3 +10,11 @@ services:
       - 8080:8080
     volumes:
       - ./:/app
+    depends_on:
+      - redis
+
+  redis:
+    image: "redis:latest"
+    container_name: redis
+    ports:
+      - 6379:6379
