--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,16 @@ services:
       - ./:/app
     depends_on:
       - redis
+      - memcached
 
   redis:
     image: "redis:latest"
     container_name: redis
     ports:
       - 6379:6379
+
+  memcached:
+    image: "memcached:latest"
+    container_name: memcached
+    ports:
+      - 11211:11211
